<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Maxim Smolyakov
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="@string/sessions_category_key"
        app:title="@string/sessions_category_title">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="@string/start_breaks_automatically_key"
            app:title="@string/start_breaks_automatically_title" />
    </PreferenceCategory>
    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        app:key="@string/about_category_key"
        app:title="@string/about_category_title">
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/rate_app_key"
            app:summary="@string/rate_app_summary"
            app:title="@string/rate_app_title" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/privacy_policy_key"
            app:title="@string/privacy_policy_title" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/version_key"
            app:title="@string/version_title"
            tools:summary="1.0.0" />
    </PreferenceCategory>
</PreferenceScreen>